<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.gm_ro.csi_week_1.CSI_week_1"
    android:weightSum="1"
    android:contextClickable="true"
    android:contentDescription="@string/portret">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/mybadguy"
        android:contentDescription="@string/portret"
        android:layout_weight="0.24" />

    <TableLayout
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Info"
        android:layout_marginLeft="30dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Rname">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mike"
                android:id="@+id/tvName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Rgender">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mannelijk"
                android:id="@+id/tvGender" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Rage">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21"
                android:id="@+id/tvAge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Rbounty">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bounty"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25_000"
                android:id="@+id/tvBounty" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:text="@string/lorem"
        android:id="@+id/tvDesc"
        android:layout_weight="0.20"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:scrollIndicators="right" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repport"
        android:id="@+id/bRepport"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.24"
        android:layout_marginTop="30dp"
        style="@style/button"/>
</LinearLayout>
