<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.gm_ro.csi_week_1.CSI_week_1"
    android:weightSum="1"
    android:contextClickable="true"
    android:contentDescription="@string/portret">

    <Button
        style="@style/WrapContent.ButtonShape"
        android:text="@string/send"
        android:id="@+id/button"
        android:layout_weight="0.24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="@style/WrapContent.ButtonShape"
        android:text="@string/back"
        android:id="@+id/bBack"
        android:layout_gravity="right"
        android:layout_weight="0.24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/WrapContent.ButtonShape"
        android:text="@string/gps_position"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="@style/WrapContent.ButtonShape"
        android:text="@string/call_113"
        android:id="@+id/bRepport"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        style="@style/WrapContent.ButtonShape"
        android:text="New ToggleButton"
        android:id="@+id/tbGps"
        android:checked="false"
        android:enabled="true"
        android:textOn="ON"
        android:textOff="OFF"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/bRepport"
        android:layout_alignStart="@+id/bRepport"
        android:layout_marginTop="24dp" />

    <ImageView
        style="@style/WrapContent"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/mybadguy"
        android:contentDescription="@string/portret"
        android:layout_weight="0.24"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/WrapContent.ButtonShape"
        android:text="@string/take_picture"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/bBack"
        android:layout_alignStart="@+id/bBack" />

</RelativeLayout>
